--- a/package.json
+++ b/package.json
@@ -9,16 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.72",
+    "@langchain/openai": "^0.6.9",
+    "@langchain/qdrant": "^0.1.3",
+    "@mozilla/readability": "^0.6.0",
+    "@neondatabase/serverless": "^1.0.1",
+    "@qdrant/js-client-rest": "^1.15.1",
+    "@tanstack/react-query": "^5.85.5",
+    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.11.0",
+    "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.4",
+    "js-cookie": "^3.0.5",
+    "jsdom": "^26.1.0",
+    "langchain": "^0.3.31",
+    "lucide-react": "^0.540.0",
+    "next": "15.4.7",
+    "openai": "^5.13.1",
+    "pdfjs-dist": "^5.4.54",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.7"
+    "react-icons": "^5.5.0",
+    "zod": "^4.0.17",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
