--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
     "@langchain/core": "^0.3.72",
@@ -18,7 +21,6 @@
     "@tanstack/react-query": "^5.85.5",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.11.0",
-    "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.4",
     "js-cookie": "^3.0.5",
     "jsdom": "^26.1.0",
@@ -39,6 +41,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
