--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "zod": "^4.0.17",
     "zustand": "^5.0.7"
   },
